fixed issues with images on mobile and added tool tip dropdown

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -38,10 +38,9 @@
 }
 
 .state-machine {
-  background-image: url(/assets/images/v6StateMachine.png);
-  //background-size: cover;
-  background-position: top 0px left 0px;
-  //height: 700px;
+  max-width: 100%;
+  min-width: 300px;
+  height: auto;
 }
 
 .container {
@@ -83,6 +82,17 @@
   text-decoration: none;
   line-height: 6.5rem;
   color: #222;
+}
+
+.inverse-link{
+  text-transform: uppercase;
+  font-size: 11px;
+  font-weight: 600;
+  letter-spacing: .2rem;
+  margin-right: 35px;
+  text-decoration: none;
+  line-height: 6.5rem;
+  color: white;
 }
 
 .navbar-link.active {
@@ -140,17 +150,9 @@ hr {
 
 .joe-in-pics-pic {
   margin-bottom: 3rem;
-}
-
-.inverse-link{
-  text-transform: uppercase;
-  font-size: 11px;
-  font-weight: 600;
-  letter-spacing: .2rem;
-  margin-right: 35px;
-  text-decoration: none;
-  line-height: 6.5rem;
-  color: white;
+  max-width: 100%;
+  min-width: 300px;
+  height: auto;
 }
 
 .bg-offwhite {
@@ -170,6 +172,70 @@ hr {
   padding: 2rem;
 }
 
-.flex {
-  display: flex;
+/* Popover */
+.popover.open {
+  display: block;
 }
+.popover {
+  display: none;
+  position: absolute;
+  z-index: 3;
+  top: 0;
+  left: 0;
+  background: #fff;
+  border: 1px solid #eee;
+  border-radius: 4px;
+  top: 92%;
+  -webkit-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
+     -moz-filter: drop-shadow(0 0 6px rgba(0,0,0,.1));
+          filter: drop-shadow(0 0 6px rgba(0,0,0,.1)); }
+.popover-item:first-child .popover-link:after,
+.popover-item:first-child .popover-link:before {
+  bottom: 100%;
+  left: 50%;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none; }
+.popover-item:first-child .popover-link:after {
+  border-color: rgba(255, 255, 255, 0);
+  border-bottom-color: #fff;
+  border-width: 10px;
+  margin-left: -10px; }
+.popover-item:first-child .popover-link:before {
+  border-color: rgba(238, 238, 238, 0);
+  border-bottom-color: #eee;
+  border-width: 11px;
+  margin-left: -11px; }
+.popover-list {
+  padding: 0;
+  margin: 0;
+  list-style: none; }
+.popover-item {
+  padding: 0;
+  margin: 0; }
+.popover-link {
+  position: relative;
+  color: #222;
+  display: block;
+  padding: 8px 20px;
+  border-bottom: 1px solid #eee;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.0rem;
+  font-weight: 600;
+  text-align: center;
+  letter-spacing: .1rem; }
+.popover-item:first-child .popover-link {
+  border-radius: 4px 4px 0 0; }
+.popover-item:last-child .popover-link {
+  border-radius: 0 0 4px 4px;
+  border-bottom-width: 0; }
+.popover-link:hover {
+  color: #fff;
+  background: #2b2b2b; }
+.popover-link:hover,
+.popover-item:first-child .popover-link:hover:after {
+  border-bottom-color: #2b2b2b; }
